...

class PasswordSignUpViewController: UIViewController {

    //MARK: - 프로퍼티

    private var textFieldText: String = "닉네임"
    private var textFieldPlaceHolder: String = "8글자 이하로 작성해주세요"
    private let welcomeView: UIView = UIView().welcomeView()
    private let nextButton: UIButton = UIButton().nextButton()
    private lazy var textField: UITextField = UITextField().signUpTextField(
        text: "비밀번호",
        placeholder: "8글자 이상으로 작성해주세요"
    )
    
    //MARK: - 라이프사이클
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
