...
    //MARK: - 프로퍼티

    private let welcomeView: UIView = UIView().welcomeView()
    private let nextButton: UIButton = UIButton().nextButton()
    private lazy var textField: UITextField = UITextField().signUpTextField(
        text: "이메일",
        placeholder: "passorder@naver.com"
    )
    
    //MARK: - 라이프사이클
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
